--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-cors": "0.0.3",
+    "moment": "^2.22.1",
     "morgan": "^1.8.2",
     "pg": "^6.4.0",
     "pg-hstore": "^2.3.2",
